--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ header {
     position: relative;
     right: -100px;
 }
-#bottom-right-header a, img#search {
+#bottom-right-header a, .search {
     justify-content: space-around;
     padding: 0 10px;
     font-size: 28px;
@@ -59,9 +59,9 @@ header {
     align-items: center;
     position: relative;
 }
-img#search {
+#search {
     position: relative;
-    top: -70px;
+    top: 5px;
 }
 #bottom-right-header, #top-right-header {
     background-color: white;
@@ -92,6 +92,7 @@ img#search {
     position: relative;
     top: -30px;
     right: -11px;
+    height: 110px;
 }
 div#slogan-product {
     display: flex;
@@ -280,10 +281,15 @@ h1#slogan-top {
 
     display: block;
 }
-#burger-menu img#search {
+#burger-menu .search {
     position: relative;
     top: 10px;
     right: 17px;
+}
+#search {
+    position: relative;
+    top: 10px;
+    right: 15px;
 }
 #burger-menu img#burger {
     position: relative;
