--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@ h1 {
     display: block;
     left: -114px;
 }
+
 h1#slogan-top {
     position: relative;
 }
@@ -134,7 +135,7 @@ h1#slogan-top {
 }
 #bag-3 {
     position: relative;
-    right: 100px;
+    right: 150px;
     
 }
 #nb-bag {
@@ -145,16 +146,16 @@ h1#slogan-top {
 .white {
     height: 450px;
 }
-#blob-right {
+.blob-right {
     float: right;
     position: relative;
-    right: 130px;
+    right: 100px;
     top: 45px;
 }
 .button {
-    background-color: white;
+    background-color: #E80481;
   border: none;
-  color: #E80481;
+  color: white;
   padding: 10px 32px;
   text-align: center;
   text-decoration: none;
@@ -164,8 +165,8 @@ h1#slogan-top {
   margin: 4px 2px;
   cursor: pointer;
   position: relative;
-  left: 145px;
-  top: 275px;
+  right: 705px;
+  top: 575px;
   border-radius: 7px;
   float: right;
 }
@@ -175,6 +176,7 @@ h1#slogan-top {
     height: 800px;
     display: block;
 }
+
 .blob-left {
     float: left;
     position: relative;
@@ -184,7 +186,7 @@ h1#slogan-top {
 
 #blob3 {
     position: relative;
-    right: -180px;
+    right: 80px;
     top: -400px;
 }
 
@@ -264,6 +266,12 @@ h1#slogan-top {
 }
 /* MEDIA */
 @media only screen and (max-width: 1023px) {
+#blob1 {
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    top: 40px;
+}
     /* LANDING */
 #burger-menu {
     height: 52px;
@@ -307,7 +315,6 @@ h1#slogan-top {
 }
 h1 {
     font-size: 25px;
-    position: relative;
 }
 #haribo {
     float: left;
@@ -328,17 +335,18 @@ h1#slogan-top {
     display: contents;
 }
 .bags-tilt-1 {
-    height: 300px;
+    height: 330px;
 }
 #bag-3 {
-    bottom: 380px;
+    bottom: 0;
+    right: 50px;
 }
 #bag-1 {
     top: -10px;
     left: 90px;
 }
 .bags-tilt-2 {
-    height: 300px;
+    height: 330px;
     left: 45px;
     top: 400px;
     position: relative;
@@ -349,9 +357,7 @@ h1#slogan-top {
     top: 0px;
 }
 /* MAIN */
-.white {
-    height: 450px;
-}
+
 #blob-right {
     right: -20px;
     top: -250px;
@@ -360,21 +366,25 @@ h1#slogan-top {
     margin-right: auto;
     float: none;
 }
+#recipe {
+    position: relative;
+    right: 35px;
+    top: -295px;
+}
 .button {
-    background-color: white;
+    background-color: #E80481;
   border: none;
-  color: #E80481;
+  color: white;
   padding: 5px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   width: 95px;
   font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
   position: relative;
-  left: 133px;
-  top: -370px;
+  left: 155px;
+  top: -100px;
   border-radius: 7px;
   float: none;
 }
@@ -400,30 +410,34 @@ h1#slogan-top {
     height: 280px;
     display: block;
 }
-.blob-left {
+#arrow2 {
     position: relative;
-    right: 300px;
-    top: 350px;
+    left: 350px;
+    bottom: 75px;
+}
+.blob-left {
+    display: none;
 }
 
 #blob3 {
-    position: relative;
-    right: -20px;
-    top: -690px;
-    height: 340px;
+    display: none;
 }
 
 #nb-flag {
     background-image: url(images/nb.png);
-    margin-top: 450px;
+    margin-top: 0px;
     height: 300px;
 }
 #cpe {
     display: block;
     margin-left: 40px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 60px;
+    margin-bottom: 50px;
 
+}
+#mascot {
+    position: relative;
+    bottom: 38px;
 }
 #trans-flag {
     height: 300px;
@@ -437,9 +451,9 @@ h1#slogan-top {
     display: none;
 }
 #or2 {
-    align-items: center;
-   margin-top: 90px;
-   margin-left: 20px;
+    position: relative;
+    left: 30px;
+    top: 50px;
     display: block;
 }
 #nv {
